--- a/index.html
+++ b/index.html
@@ -9,5 +9,37 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__nav container">
+            <nav class="nav">
+                <a href="#" class="logo">CONQUEST</a>
+                <ul class="menu">
+                    <li class="menu__list"><a href="#" class="menu__link">Каталог</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Акции</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Доставка</a></li>
+                    <li class="menu__list"><a href="#" class="menu__link">Контакты</a></li>
+                </ul>
+                <ul class="nav__icons">
+                    <li class="nav__icon">
+                        <span class="nav__icon-search"></span>
+                    </li>
+                    <li class="nav__icon">
+                        <span class="nav__icon-likes"></span>
+                        <span class="nav__icon-counter">1</span>
+                    </li>
+                    <li class="nav__icon">
+                        <span class="nav__icon-basket"></span>
+                    </li>
+                    <li class="nav__icon nav__hamburger">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                    </li>
+
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <script src="./js/main.js"></script>
 </body>
 </html>
