feat: add baner in header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conquest</title>
     <link rel="stylesheet" href="./css/normalize.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Prata&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -35,9 +39,22 @@
                         <span class="line line2"></span>
                         <span class="line line3"></span>
                     </li>
-
                 </ul>
             </nav>
+        </div>
+        <div class="header__box container">
+            <div class="header__text-box">
+                <h1 class="header__title title dash__before">Весна/Лето 2019 <span>Коллекция</span></h1>
+                <p class="header__description">
+                    Швейцарские часы в наличии в&#8239;Москве<br>и с доставкой по всему миру
+                </p>
+                <a href="#" class="header__btn btn">Смотреть каталог</a>
+            </div>
+            <div class="header__banner">
+                <span class="header__banner-left header__banner-text dash__after">22 000 &#8381;</span>
+                <span class="header__banner-right header__banner-text dash__before">28 мм диаметр</span>
+                <img src="./images/watch_main.png" alt="watch">
+            </div>
         </div>
     </header>
     <script src="./js/main.js"></script>
