feat: add section cards

--- a/index.html
+++ b/index.html
@@ -57,6 +57,44 @@
             </div>
         </div>
     </header>
+    <section class="products container">
+        <h2 class="products__title title">Популярные модели</h2>
+        <div class="products__more-btn">
+            <a href="#" class="links_active">Смотреть все</a>
+        </div>
+        <div class="products__cards">
+            <div class="products__card">
+                <div>
+                    <h3 class="products__name">Rado</h3>
+                    <p class="products__price">65 300 <span>&#8381;</span></p>
+                </div>
+                <div class="products__img-bg">
+                    <div class="products__img"><img src="./images/watch_1.png" alt="Rado"></div>
+                </div>
+                <a href="#" class="products__link links_active">Подробнее</a>
+            </div>
+            <div class="products__card">
+                <div>
+                    <h3 class="products__name">Rado</h3>
+                    <p class="products__price">65 300 <span>&#8381;</span></p>
+                </div>
+                <div class="products__img-bg">
+                    <div class="products__img"><img src="./images/watch_2.png" alt="Rado"></div>
+                </div>
+                <a href="#" class="products__link links_active">Подробнее</a>
+            </div>
+            <div class="products__card">
+                <div>
+                    <h3 class="products__name">Rado</h3>
+                    <p class="products__price">65 300 <span>&#8381;</span></p>
+                </div>
+                <div class="products__img-bg">
+                    <div class="products__img"><img src="./images/watch_3.png" alt="Rado"></div>
+                </div>
+                <a href="#" class="products__link links_active">Подробнее</a>
+            </div>
+        </div>
+    </section>
     <script src="./js/main.js"></script>
 </body>
 </html>
