--- a/index.html
+++ b/index.html
@@ -95,6 +95,27 @@
             </div>
         </div>
     </section>
+    <section class="banner">
+        <div class="container banner__box">
+            <div class="banner__slider">
+                <div class="banner__slide">
+                    <img src="./images/banner.jpg" alt="watch">
+                </div>
+                <div class="banner__nav">
+                    <button class="banner__arrows banner__arrow_left"><img src="./images/icons/arrow_left.svg" alt=""></button>
+                    <span class="banner__slider-page">01</span>
+                    <button class="banner__arrows banner__arrow_right"><img src="./images/icons/arrow_right.svg" alt=""></button>
+                </div>
+            </div>
+            <div class="banner__text">
+                <h3 class="banner__title title">Подлинное качество</h3>
+                <p class="banner__description">Все часы производятся в Швейцарии и имеют сертификаты качества. Настоящие швейцарские часы — это предмет гордости и престижа.</p>
+                <a href="#" class="banner__btn btn">Смотреть каталог</a>
+            </div>
+        </div>
+        <div class="banner__elipse-bg1 banner__elipse"></div>
+        <div class="banner__elipse-bg2 banner__elipse"></div>
+    </section>
     <script src="./js/main.js"></script>
 </body>
 </html>
