feat: added footer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,27 @@
         <div class="banner__elipse-bg1 banner__elipse"></div>
         <div class="banner__elipse-bg2 banner__elipse"></div>
     </section>
+    <section class="news container">
+        <div class="news__text">
+            <h3 class="news__title title">Следите за нашими новостями</h3>
+            <p class="news__description">
+                Подписывайтесь на <strong>@conquest_watch</strong> в соцсетях и узнавайте о новинках и акциях первыми.
+            </p>
+            <div class="news__links">
+                <a href="#"><img src="./images/icons/instagram_icon.svg" alt="instagram"></a>
+                <a href="#"><img src="./images/icons/facebook_icon.svg" alt="facebook"></a>
+                <a href="#"><img src="./images/icons/twitter_icon.svg" alt="twitter"></a>
+            </div>
+        </div>
+        <div class="news__gallery">
+            <div class="news__gallery-box">
+                <div class="news__img news__img-1"></div>
+                <div class="news__img news__img-2"></div>
+            </div>
+            <div class="news__gallery-box news__img news__img-3">
+            </div>
+        </div>
+    </section>
     <script src="./js/main.js"></script>
 </body>
 </html>
