feat: added footer

--- a/index.html
+++ b/index.html
@@ -137,6 +137,36 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container footer__box">
+            <ul class="footer__lists">
+                <li class="footer__list-title"><a href="#" class="logo">CONQUEST</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">8 (499) 450-47-97</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">info@conquest.watch.ru</a></li>
+            </ul>
+            <ul class="footer__lists">
+                <li class="footer__list-title"><h4>о компании</h4></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Наши магазины</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Вакансии</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Сертификаты</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Отзывы</a></li>
+            </ul>
+            <ul class="footer__lists">
+                <li class="footer__list-title"><h4>покупателям</h4></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Каталог товаров</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Как заказать?</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">FAQ</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Корпоративным клиентам</a></li>
+            </ul>
+            <ul class="footer__lists">
+                <li class="footer__list-title"><h4>оплата и доставка</h4></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Способы оплаты</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Время доставки</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Гарантии и ремонт</a></li>
+                <li class="footer__list-item"><a href="#" class="footer__link">Возврат и компенсация</a></li>
+            </ul>
+        </div>
+    </footer>
     <script src="./js/main.js"></script>
 </body>
 </html>
