feat: added mobile menu

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                     </li>
                 </ul>
             </nav>
+            <ul class="menu__mobile">
+                <li class="menu__list"><a href="#" class="menu__link">Каталог</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Акции</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Доставка</a></li>
+                <li class="menu__list"><a href="#" class="menu__link">Контакты</a></li>
+            </ul>
         </div>
         <div class="header__box container">
             <div class="header__text-box">
